Fix z-index in the header

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -126,6 +126,8 @@ iframe {
 /** .header **/
 .header {
   margin-bottom: 32px;
+  position: relative;
+  z-index: 3;
 }
 
 .header-inner {
